src/objects/Survey_Request__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Started_Date__c</fullName>
        <label>Stop Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Stop_Duration_in_Days__c</fullName>
        <label>Total Stop Duration in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CannotChangeStatusFromClosedToOther</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( PRIORVALUE(Status__c), &quot;Close&quot;) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot change status from Close to other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Set_Stop_During_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  ISPICKVAL(Status__c ,&quot;Stop&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot set Status as Stop during record creation</errorMessage>
    </validationRules>
</CustomObject>